[27 September 2007]

* Improve the handling of multiparameter attributes.

[19 September 2007]

* Almost a complete rewrite! API unchanged. Let me know if there are any issues.

[2 Sep 2007]

 * Allow date and time formats like "February 5, 2006" and "September 01, 2007 06:10". [Mark A. Lane]

[7 Jun 07]

 * Datetime restrictions should be parsed as datetimes [Adam Meehan]
 
[Earlier]

 * Remove unused colon separated date format (dd:mm:yy) from parsing